/**
 * ディーラー ID
 */
export class DealerId {
  /**
   * コンストラクタ
   *
   * @param value 値
   */
  public constructor(public readonly value: string) {}
}
