/**
 * 試合 ID
 */
export class MatchId {
  /**
   * コンストラクタ
   *
   * @param value 値
   */
  public constructor(public readonly value: string) {}
}
