/**
 * プレイヤー ID
 */
export class PlayerId {
  /**
   * コンストラクタ
   *
   * @param value 値
   */
  public constructor(public readonly value: string) {}
}
