/**
 * ユーザ ID
 */
export class UserId {
  /**
   * コンストラクタ
   *
   * @param value 値
   */
  public constructor(public readonly value: string) {}
}
