/**
 * ユーザ名
 */
export class UserName {
  /**
   * コンストラクタ
   *
   * @param value 値
   */
  public constructor(public readonly value: string) {}
}
